# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: bg_engine.py  brain_games_even.py  cli.py  engine.py
brain_games/games/: bg_calc_logic.py  bg_even_logic.py  bg_gcd_logic.py  bg_prime_logic.py  bg_progression_logic.py  brain_calc.py  brain_even.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
