[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of 5 simple math games"
authors = ["Andrey Volkov <andrew.unbelievable@yandex.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = 'https://github.com/Unbeliev4ble/python-project-49'
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Framework :: Flake8",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
asciinema = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"